Extra scripts block

--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -72,6 +72,9 @@
         {% include "fragments/scripts.html" %}
     {% endblock %}
 
+    {% block scripts_extra %}
+    {% endblock %}
+
     {% block body_bottom %}
         {% include "fragments/extra.html" %}
     {% endblock %}
