--- a/content/templates/page.html
+++ b/content/templates/page.html
@@ -44,9 +44,53 @@
     {% block body_top %} {% endblock %}
     <div id="canvas" class="canvas">
         <div id="top">
-        {% block canvas_top %}
-            {% include "fragments/canvas_top.html" %}
-        {% endblock %}
+            <div class="header">
+                <a href="/" class="hLogo" title="Tematika.com"></a>
+                <div class="hBuscador">
+                    <ul class="dropdown">
+                        <li class="dir"
+                            onclick="javascript:desplegarOpciones('listaBuscador');"><span
+                            id="optBusqueda">
+                            <!-- ??? <tmpl_var optSeleccionada> -->
+                        </span>
+                            <ul style="display: none;" id="listaBuscador"
+                                onmouseover="clearTimeout(tempo);"
+                                onmouseout="ocultarOpcionesT('listaBuscador');">
+            
+                                {% block search_box_items %} {#- Each page fills li -#}
+                                {% endblock %}
+            
+                            </ul>
+                        </li>
+                    </ul>
+                    <input id="txtBuscar" name="buscadorTxtField" type="text" value=""
+                        class="hBuscTxtF"
+                        onkeypress="javascript: if(pressEnter(event)) buscador_setBusqueda(document.getElementById('optBusqueda').innerHTML, document.getElementById('txtBuscar').value, '','',document.getElementById('seccionBusqueda').value);">
+                    <input type="hidden" id="seccionBusqueda" value=""> <input
+                        type="hidden" id="idSeccionPropia" value=""> <input type="hidden"
+                        id="idSeccion" value=""> <a id="btnBuscar" class="hBuscButton"
+                        title="Buscar"
+                        href="javascript:buscador_setBusqueda(document.getElementById('optBusqueda').innerHTML,document.getElementById('txtBuscar').value,'',document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">&nbsp;</a>
+                </div>
+                <a href="/institucional/servicios.jsp#servicios" class="hServClientes"
+                    title="Servicio al cliente"></a>
+                <div class="hModUsuarioBack"></div>
+                <div class="hModUsuario">
+                    <div class="hModUsrNombre" style="cursor: pointer"
+                        onclick="window.location.href='/miCuenta/modificarSocio.jsp';">Mi
+                        Cuenta</div>
+                    <a id="divSalir" style="visibility: hidden;" class="hModUsrCerrar"
+                        href="/TerminarSesion" title="Salir">salir</a>
+                    <div class="hModUsrExtra">
+                        Consulta&acute; tus <br> <a id="lnkCantPuntExtra" href="/extra">puntos</a>eXtra!
+                    </div>
+                    <a href="/IniciarCompra" id="textoCarrito" class="hModUsrCarrito"
+                        title="Finalizar la compra"></a> <a href="/compra/carrito.jsp"
+                        id="textoCarritoLnk" class="hModUsrCarritoLnk"
+                        title="Carrito de compra"></a> <a href="/miCuenta"
+                        class="hModUsrButton" title="Panel de Usuario"></a>
+                </div>
+            </div>
         </div>
         <div id="messages">
         {% block canvas_messages %}
