--- a/content/templates/fragments/common.css
+++ b/content/templates/fragments/common.css
@@ -2765,3 +2765,9 @@ filter:alpha(opacity = 70);
 opacity:0.7;
         z-index:9998;
 }
+
+div.lastvisited {
+    width:       900px;
+    padding-top: 10px;
+    float:       left;
+}
