Move tinycarousel css to common fragment

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -4,7 +4,7 @@
     <link type="text/css" rel="stylesheet" href="{{ url.data }}css/jquery.qtip.min.css">
     <style type="text/css">
         {% include "home/styles.css" %}
-        {% include "home/tinycarousel.css" %}
+        {% include "fragments/tinycarousel.css" %}
         {% include "fragments/gallery.css" %}
     </style>
 {% endblock %}
