rename gallery -> showcase

--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -31,7 +31,7 @@
 
     {% include "fragments/comments.js" %}
     {% include "fragments/messages.js" %}
-    {% include "fragments/gallery.js" %}
+    {% include "fragments/showcase.js" %}
     {% include "fragments/dropDownMenu.js" %}
 
 </script>
