--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -5,7 +5,7 @@
     <style type="text/css">
         {% include "home/styles.css" %}
         {% include "fragments/tinycarousel.css" %}
-        {% include "fragments/gallery.css" %}
+        {% include "fragments/showcase.css" %}
     </style>
 {% endblock %}
 
@@ -17,7 +17,7 @@
 {% block canvas_content -%}
     <div id="seccionTematika">
         <div id="showcase">
-            {% include "home/gallery.html" %}
+            {% include "home/showcase.html" %}
         </div>
         <div id="comments">
 {# DISABLED WAITING FOR DATASET
