--- a/content/templates/home/showcase.html
+++ b/content/templates/home/showcase.html
@@ -1,3 +1,5 @@
+{%- import './macros/slider.html' as renderS -%}
+{%- import './macros/tooltip.html' as renderT -%}
 <div class="tmtkMesaNovedades" id="mesa">
 	<!-- mesa y t&iacute;tulos de secciones -->
 	<a href="/libros" class="tmtkMesaSeccionesTit" title="Libros"
@@ -79,50 +81,22 @@
 									<div class="" id="cat3Disabled"></div></td>
 							</tr>
 							<tr>
+							{%- for section, cols in (("Books", 2), ("Music", 2), ("Movies", 2), ("Games", 2)) -%}
 								<td align="center">
-								<div id="sliderHomeBooks">
-									<a class="buttons prev" id="anterior1" onfocus="this.blur()"
-										href="#"><object>
-											<div id="anterior1DIV" class="gallery-prev"></div>
+								<div id="sliderHome{{ section }}">
+									<a class="buttons prev" id="anterior{{ loop.index }}" onfocus="this.blur()" href="#">
+                                        <object>
+											<div id="anterior{{ loop.index }}DIV" class="showcase-prev"></div>
 										</object>
-								</a><div id="sliderBooks">{{ slider_home_books|replace("\n", "") }}</div>
-									 <a class="buttons next" id="siguiente1" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente1DIV" class="gallery-next"></div>
+								    </a>
+                                <div id="slider{{ section }}">{{ renderS.renderSlider(d[section], section|lower, cols, url) }}</div>
+									 <a class="buttons next" id="siguiente{{ loop.index }}" onfocus="this.blur()" href="#">
+                                        <object>
+											<div id="siguiente{{ loop.index }}DIV" class="showcase-next"></div>
 										</object>
-								</a></div></td>
-								<td align="center">
-								<div id="sliderHomeMusic">
-									<a class="buttons prev" id="anterior4" onfocus="this.blur()"
-										href="#"><object>
-											<div id="anterior4DIV" class="gallery-prev"></div>
-										</object>
-								</a><div id="sliderMusic">{{ slider_home_music|replace("\n", "") }}</div>
-									 <a class="buttons next" id="siguiente4" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente4DIV" class="gallery-next"></div>
-										</object>
-								</a></div></td>
-								<td align="center">
-								<div id="sliderHomeMovies">
-									<a class="buttons prev" id="anterior5" onfocus="this.blur()"
-										href="#"><object>
-											<div id="anterior5DIV" class="gallery-prev"></div>
-										</object>
-								</a><div id="sliderMovies">{{ slider_home_movies|replace("\n", "") }}</div>
-									 <a class="buttons next" id="siguiente5" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente5DIV" class="gallery-next"></div>
-										</object>
-								</a></div></td>
-								<td align="center">
-								<div id="sliderHomeGames">
-									<a class="buttons prev" id="anterior3" onfocus="this.blur()"
-										href="#"><object>
-											<div id="anterior3DIV" class="gallery-prev"></div>
-										</object>
-								</a><div id="sliderGames">{{ slider_home_games|replace("\n", "") }}</div>
-									 <a class="buttons next" id="siguiente3" onfocus="this.blur()" href="#"><object>
-											<div id="siguiente3DIV" class="gallery-next"></div>
-										</object>
-								</a></div></td>
+								    </a>
+                                </div></td>
+                            {%- endfor -%}
 							</tr>
 						</table></td>
 				</tr>
@@ -130,8 +104,10 @@
 		</div>
 	</div>
 </div>
+{#
 <!-- FIN mesa y t&iacute;tulos de secciones -->
-<div id="tooltip_content_books" style="display: none;">{{ tooltip_home_books|replace("\n", "") }}</div>
-<div id="tooltip_content_music" style="display: none;">{{ tooltip_home_music|replace("\n", "") }}</div>
-<div id="tooltip_content_movies" style="display: none;">{{ tooltip_home_movies|replace("\n", "") }}</div>
-<div id="tooltip_content_games" style="display: none;">{{ tooltip_home_games|replace("\n", "") }}</div>
+<div id="tooltip_content_books" style="display: none;">{{ renderT.renderToolTip(tooltip['books'][tooltip['books'].keys()[0]], 'books')|replace("\n", "") }}</div>
+<div id="tooltip_content_music" style="display: none;">{{ renderT.renderToolTip(tooltip['music'][tooltip['music'].keys()[0]], 'music')|replace("\n", "") }}</div>
+<div id="tooltip_content_movies" style="display: none;">{{ renderT.renderToolTip(tooltip['movies'][tooltip['movies'].keys()[0]], 'movies')|replace("\n", "") }}</div>
+<div id="tooltip_content_games" style="display: none;">{{ renderT.renderToolTip(tooltip['games'][tooltip['games'].keys()[0]], 'games')|replace("\n", "") }}</div>
+#}
