--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -4,8 +4,8 @@
     <link type="text/css" rel="stylesheet" href="{{ url.data }}css/jquery.qtip.min.css">
     <style type="text/css">
         {% include "home/styles.css" %}
-        {% include "fragments/tinycarousel.css" %}
         {% include "fragments/showcase.css" %}
+        {% include "fragments/last_visited.css" %}
     </style>
 {% endblock %}
 
@@ -20,13 +20,51 @@
             {% include "home/showcase.html" %}
         </div>
         <div id="comments">
-{# DISABLED WAITING FOR DATASET
-                {% include "fragments/comments.html" %}
-#}
+            {% include "fragments/comments.html" %}
         </div>
         <div id="lastvisited"
                 style="width: 900px; padding-top: 10px; float: left;">
             {% include "fragments/last_visited.html" %}
         </div>
     </div>
+{%- endblock %}
+
+{% block scripts_extra -%}
+	<script type="text/javascript">
+    {% include "fragments/comments.js" %}
+    {% include "fragments/messages.js" %}
+    {% include "fragments/showcase.js" %}
+    {% include "fragments/dropDownMenu.js" %}
+    {% include "fragments/last_visited.js" %}
+	</script>
+
+	<!-- Data Scripts -->
+	<script type="text/javascript" src="{{ url.data }}home-comments.js"></script>
+	<script type="text/javascript" src="{{ url.data }}home-messages.js"></script>
+	<script type="text/javascript" src="{{ url.data }}home-showcase.js"></script>
+	<!-- JQuery Carousel -->
+	<script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
+	<script type="text/javascript" src="{{ url.data }}js/jquery.qtip.min.js"></script>
+	<!-- JFather -->
+	<script type="text/javascript" src="{{ url.data }}js/jfather.js"></script>
+	<!-- Last visited -->
+	<script type="text/javascript" src="/js/lastVisited.js"></script>
+
+	<script type="text/javascript">
+
+		jQuery(document).ready(function() {
+			$('#sliderHomeBooks').tinycarousel({ axis: 'y', display: 1} );
+			$('#sliderHomeMusic').tinycarousel({ axis: 'y', display: 1} );
+			$('#sliderHomeMovies').tinycarousel({ axis: 'y', display: 1} );
+			$('#sliderHomeGames').tinycarousel({ axis: 'y', display: 1} );
+			/* $(".inline").colorbox({opacity: 0, inline:true, width:"400px"}); */
+			/* .bind("mouseover", function(){$(this).trigger("click");  */
+			renderLastVisited('lastvisited');
+		});
+
+	    /* Update data */
+	    fillMessages(null);
+	    fillComments(null);
+
+	</script>
 {%- endblock %}
