Add back tinycarousel css

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -4,6 +4,7 @@
     <link type="text/css" rel="stylesheet" href="{{ url.data }}css/jquery.qtip.min.css">
     <style type="text/css">
         {% include "home/styles.css" %}
+        {% include "fragments/tinycarousel.css" %}
         {% include "fragments/showcase.css" %}
         {% include "fragments/last_visited.css" %}
     </style>
