Reorder JS loading

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -31,6 +31,9 @@
 {%- endblock %}
 
 {% block scripts_extra -%}
+	<!-- JQuery Carousel and qTip -->
+	<script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
+	<script type="text/javascript" src="{{ url.data }}js/jquery.qtip.min.js"></script>
 	<!-- JFather -->
 	<script type="text/javascript" src="{{ url.data }}js/jfather.js"></script>
 
@@ -45,9 +48,6 @@
 	<!-- Data Scripts -->
 	<script type="text/javascript" src="{{ url.data }}home-comments.js"></script>
 	<script type="text/javascript" src="{{ url.data }}home-showcase.js"></script>
-	<!-- JQuery Carousel -->
-	<script type="text/javascript" src="{{ url.data }}js/jquery.tinycarousel.js"></script>
-	<script type="text/javascript" src="{{ url.data }}js/jquery.qtip.min.js"></script>
 
 	<script type="text/javascript">
 
