correcciones para los comentarios de la home

--- a/content/templates/fragments/comments.html
+++ b/content/templates/fragments/comments.html
@@ -8,7 +8,7 @@
 					<li><a href="javascript:mostrarBuscarPor('lstoptBus1','lstoptBusqueda','listaComentarios');fillComments('books', callBackDropDownComments);" id="lstoptBus1">Solo libros</a></li>
 					<li><a href="javascript:mostrarBuscarPor('lstoptBus2','lstoptBusqueda','listaComentarios');fillComments('music', callBackDropDownComments);" id="lstoptBus2">Solo musica</a></li>
 					<li><a href="javascript:mostrarBuscarPor('lstoptBus3','lstoptBusqueda','listaComentarios');fillComments('movies', callBackDropDownComments);" id="lstoptBus3">Solo peliculas</a></li>
-					<li><a href="javascript:mostrarBuscarPor('lstoptBus4','lstoptBusqueda','listaComentarios');fillComments('last', callBackDropDownComments);" id="lstoptBus4">&Uacute;ltimos comentados</a></li>
+					<li><a href="javascript:mostrarBuscarPor('lstoptBus4','lstoptBusqueda','listaComentarios');fillComments('all', callBackDropDownComments);" id="lstoptBus4">&Uacute;ltimos comentados</a></li>
 				</ul>
 			</li>
 		</ul>
