--- a/content/templates/macros/comments.html
+++ b/content/templates/macros/comments.html
@@ -59,6 +59,7 @@
 		          	<div class="solapaCalleSeparador" id="calleSeparadorComents" style="height: 250px;"></div>
 		  		  {%- endif -%}
 	          {%- endif %}
+	        </div>
 		{%- endfor %}
 	</div>
 {%- endmacro %}
