All image urls use the proper url base

--- a/content/templates/fragments/canvas_footer.html
+++ b/content/templates/fragments/canvas_footer.html
@@ -9,7 +9,7 @@
 	</div>
 	<div class="footerText2">
 		<a href="/rss"> <img
-			src="/imagenes/rediseno/imagenes/comun/rssLogo.gif" alt=""> <span>Descargue
+			src="{{ url.images }}/imagenes/rediseno/imagenes/comun/rssLogo.gif" alt=""> <span>Descargue
 				las Novedades y Lanzamientos de Tematika en su sitio</span>
 		</a>
 	</div>
