--- a/content/templates/fragments/extra.html
+++ b/content/templates/fragments/extra.html
@@ -12,7 +12,7 @@
 	</div>
 	<div id="efectoCarritoB">
 		<a href="javascript:APP.cartClose()">
-            <img src="/imagenes/b-carrContinuar.gif"
+            <img src="{{ url.images }}/imagenes/b-carrContinuar.gif"
                     alt="Continuar" style="border:0;">
         </a>
 	</div>
