--- a/content/templates/fragments/last_visited.html
+++ b/content/templates/fragments/last_visited.html
@@ -2,7 +2,7 @@
 	cellspacing="0" class="modulosmedio">
 	<tr>
 		<td class="titulosceldas"><img
-			src="/imagenes/inicio/t-ultimosvisitados.gif"
+			src="{{ url.images }}/imagenes/inicio/t-ultimosvisitados.gif"
 			alt="Ultimos visitados">
 		</td>
 	</tr>
@@ -10,7 +10,7 @@
 	<tr>
 		<td><div class="GultvisitadosB" style="margin: auto;">
 				<div>
-					<img src="/imagenes/ultvisitados.gif" 
+					<img src="{{ url.images }}/imagenes/ultvisitados.gif" 
 					height="30" style="margin-top:10px;" alt="">
 				</div>
 				<div class="Ftexto03" style="margin-top: 10px">EN ESTE SECTOR
