--- a/content/templates/macros/productRelated.html
+++ b/content/templates/macros/productRelated.html
@@ -4,7 +4,7 @@
 		<div class="dRecomendMod">
 		    <div class="tapaContenedor">
 		        <a href="{{ article.LinkBase }}">
-		        	<img src="{{ article.CoverSmall }}" class="tapaLibros">
+		        	<img src="{{ url.images ~ article.CoverSmall }}" class="tapaLibros">
 		        </a>
 		        <div class="tapaInfo" style="visibility: hidden;">
 		    </div>
