--- a/content/templates/fragments/showcase.css
+++ b/content/templates/fragments/showcase.css
@@ -96,13 +96,13 @@ div.ui-tooltip-content span.product-delivery-note a:hover span {
 
 .showcase-prev {
     background-image:
-        url(/imagenes/rediseno/imagenes/seccionTematika/mesaAnterior.png);
+        url({{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/mesaAnterior.png);
     margin-bottom:    1px;
     margin-top:       10px;
 }
 
 .showcase-next {
     background-image:
-        url(/imagenes/rediseno/imagenes/seccionTematika/mesaSiguiente.png);
+        url({{ url.images }}/imagenes/rediseno/imagenes/seccionTematika/mesaSiguiente.png);
     margin-top:       1px;
 }
