--- a/content/templates/home/showcase.html
+++ b/content/templates/home/showcase.html
@@ -26,29 +26,8 @@
 	<div class="tmtkMesa-back">
 		<div class="tmtkMesaMenuMod">
 			<div class="tmtkMesaMenuTit"></div>
-			<ul class="dropdown">
-				<li class="diri"><span
-					onclick="javascript:desplegarOpciones('orden');"
-					id="mostrarRanking">Te Recomendamos</span>
-					<ul id="orden" onmouseover="clearTimeout(tempo);"
-						onmouseout="ocultarOpcionesT('orden');">
-						<li><a href="javascript:mostrarBuscarPor('TMK_RDA','mostrarRanking','orden');fillShowCase('Recommended', null);" id="TMK_RDA">Te Recomendamos</a></li>
-						<li><a href="javascript:mostrarBuscarPor('MV','mostrarRanking','orden');fillShowCase('Recommended', null);" id="MV">M&aacute;s Vendidos</a></li>
-						<li><a href="javascript:mostrarBuscarPor('MP','mostrarRanking','orden');fillShowCase('Recommended', null);" id="MP">M&aacute;s Populares</a></li>
-						<li><a href="javascript:mostrarBuscarPor('MVA','mostrarRanking','orden');fillShowCase('Recommended', null);" id="MVA">M&aacute;s Valorados</a></li>
-					</ul></li>
-			</ul>
-			<ul class="dropdown">
-				<li class="diri"><span
-					onclick="javascript:desplegarOpciones('filtro');"
-					id="mostrarTiempo">Todos</span>
-					<ul id="filtro" onmouseover="clearTimeout(tempo);"
-						onmouseout="ocultarOpcionesT('filtro')">
-						<li><a href="javascript:mostrarBuscarPor('M','mostrarTiempo','filtro');fillShowCase('Showcase', null);" id="M">&Uacute;ltimos tres meses</a></li>
-						<li><a href="javascript:mostrarBuscarPor('Y','mostrarTiempo','filtro');fillShowCase('Showcase', null);" id="Y">&Uacute;ltimo a&ntilde;o</a></li>
-						<li><a href="javascript:mostrarBuscarPor('T','mostrarTiempo','filtro');fillShowCase('Showcase', null);" id="T">Todos</a></li>
-					</ul></li>
-			</ul>
+            <button>Recomendados</button>
+            <button>Bestsellers</button>
 		</div>
 		<div class="tmtkMesa">
 			<table border="0" cellpadding="0" cellspacing="0">
