--- a/content/templates/home/showcase.html
+++ b/content/templates/home/showcase.html
@@ -26,8 +26,8 @@
 	<div class="tmtkMesa-back">
 		<div class="tmtkMesaMenuMod">
 			<div class="tmtkMesaMenuTit"></div>
-            <button>Recomendados</button>
-            <button>Bestsellers</button>
+            <button onclick="javascript:fillShowCase('Recommended', null);">Recomendados</button>
+            <button onclick="fillShowCase('Showcase', null);">Bestsellers</button>
 		</div>
 		<div class="tmtkMesa">
 			<table border="0" cellpadding="0" cellspacing="0">
