agregados al combo del buscador

--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -12,7 +12,10 @@
 
 {% block search_box_items %} {#- Extends the search list -#}
     <li><a id="optBus1" href="javascript:mostrarBuscarPor('optBus1','optBusqueda','listaBuscador','0','0','En Tematika.com');">Todo el sitio</a></li>
-    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '1', '1','En Libros');">En Libros</a></li>
+    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '1','En Libros');">En Libros</a></li>
+    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '4','En Musica');">En Musica</a></li>
+    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '5','En Peliculas');">En Peliculas</a></li>
+    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '3','En Pasatiempos');">En Pasatiempos</a></li>
 {%- endblock -%}
 
 {% block canvas_content -%}
