--- a/content/templates/home/index.html
+++ b/content/templates/home/index.html
@@ -10,12 +10,44 @@
     </style>
 {% endblock %}
 
-{% block search_box_items %} {#- Extends the search list -#}
-    <li><a id="optBus1" href="javascript:mostrarBuscarPor('optBus1','optBusqueda','listaBuscador','0','0','En Tematika.com');">Todo el sitio</a></li>
-    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '1','En Libros');">En Libros</a></li>
-    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '4','En Musica');">En Musica</a></li>
-    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '5','En Peliculas');">En Peliculas</a></li>
-    <li><a id="optBus2" href="javascript:mostrarBuscarPor('optBus2','optBusqueda','listaBuscador', '0', '3','En Pasatiempos');">En Pasatiempos</a></li>
+{% block search_box %}
+    <div class="hBuscador">
+        <ul class="dropdown">
+            <li class="dir" onclick="javascript:desplegarOpciones('listaBuscador');">
+                <span id="optBusqueda">Todo el Sitio</span>
+                <ul style="display: none;" id="listaBuscador"
+                    onmouseover="clearTimeout(tempo);"
+                    onmouseout="ocultarOpcionesT('listaBuscador');">
+
+                    <li>
+                        <a id="optBus1" href="javascript:APP.searchShowBy('optBus1','optBusqueda','listaBuscador','0','0','En Tematika.com');">Todo el sitio</a>
+                    </li>
+                    <li>
+                        <a id="optBus2" href="javascript:APP.searchShowBy('optBus2','optBusqueda','listaBuscador', '0', '1','En Libros');">En Libros</a>
+                    </li>
+                    <li>
+                        <a id="optBus3" href="javascript:APP.searchShowBy('optBus3','optBusqueda','listaBuscador', '0', '4','En Musica');">En Musica</a>
+                    </li>
+                    <li>
+                        <a id="optBus4" href="javascript:APP.searchShowBy('optBus4','optBusqueda','listaBuscador', '0', '5','En Peliculas');">En Peliculas</a>
+                    </li>
+                    <li>
+                        <a id="optBus5" href="javascript:APP.searchShowBy('optBus5','optBusqueda','listaBuscador', '0', '3','En Pasatiempos');">En Pasatiempos</a>
+                    </li>
+
+                </ul>
+            </li>
+        </ul>
+        <input id="txtBuscar" name="buscadorTxtField" type="text" value=""
+            class="hBuscTxtF"
+            onkeypress="javascript: if(APP.pressedEnter(event)) APP.setSearch(document.getElementById('optBusqueda').innerHTML, document.getElementById('txtBuscar').value, '0','0',document.getElementById('seccionBusqueda').value);">
+        <input type="hidden" id="seccionBusqueda"
+                value="En Tematika.com">
+        <input type="hidden" id="idSeccionPropia" value="0">
+        <input type="hidden" id="idSeccion" value="0">
+        <a id="btnBuscar" class="hBuscButton" title="Buscar"
+            href="javascript:APP.setSearch(document.getElementById('optBusqueda').innerHTML,document.getElementById('txtBuscar').value,'',document.getElementById('idSeccionPropia').value,document.getElementById('seccionBusqueda').value);">&nbsp;</a>
+    </div>
 {%- endblock -%}
 
 {% block canvas_content -%}
