--- a/content/templates/fragments/scripts.html
+++ b/content/templates/fragments/scripts.html
@@ -31,6 +31,7 @@
 </script>
 
 <script type="text/javascript">
+	{% include "fragments/dropDownMenu.js" %} {#- search box -#}
 	{% include "fragments/analytics.js" %}
 </script>
 
